# wasm_utils

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  flake.nix
.github/ISSUE_TEMPLATE/: BUG-REPORT.yml
.github/workflows/: cargo-audit.yml  dictionary.txt  quality.yml  spellcheck.yml  test_host.yml
from_js_ref/: Cargo.toml  README.md
from_js_ref/src/: lib.rs
from_js_ref/tests/: wasm_refgen.rs
tests/wasm_trait_tests/: Cargo.toml
tests/wasm_trait_tests/src/: async_trait.rs  implements.rs  js_name_override.rs  lib.rs  qa_edge_cases.rs  realistic_app.rs  static_methods.rs  sync_trait.rs
wasm_bindgen_trait/: Cargo.toml  README.md
wasm_bindgen_trait/src/: js_trait.rs  lib.rs
wasm_bindgen_trait/src/shared/: method.rs  naming.rs  ts_types.rs
wasm_refgen/: Cargo.toml  README.md
wasm_refgen/src/: lib.rs
wasm_trait/: Cargo.toml  README.md
wasm_trait/src/: js_trait.rs  lib.rs  shared.rs  wasm_implements.rs
wasm_trait/src/shared/: attrs.rs  method.rs  naming.rs  ts_types.rs
