[workspace]
resolver = "2"
members = [
    "from_js_ref",
    "wasm_refgen",
]

[workspace.package]
authors = ["Brooklyn Zelenka <hello@brooklynzelenka.com>"]

edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/automerge/wasm_utils"
rust-version = "1.90.0"
version = "0.1.0"

[workspace.dependencies]
heck = "0.5"
proc-macro2 = "1.0"
quote = "1.0"
syn = "2.0"
wasm-bindgen = "0.2.104"
