[workspace]
resolver = "2"
members = [
    "from_js_ref",
    "tests/wasm_trait_tests",
    "wasm_refgen",
    "wasm_trait",
]

[workspace.package]
authors = ["Brooklyn Zelenka <hello@brooklynzelenka.com>"]

edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/automerge/wasm_utils"
rust-version = "1.90.0"
version = "0.1.0"

[workspace.dependencies]
heck = "0.5"
js-sys = { version = "0.3", default-features = false }
proc-macro2 = "1.0"
quote = "1.0"
syn = "2.0"
wasm-bindgen = { version = "0.2.104", default-features = false }
wasm-bindgen-futures = { version = "0.4", default-features = false }

[workspace.lints.rust]
future_incompatible = { level = "warn", priority = -1 }
let_underscore = { level = "warn", priority = -1 }
missing_copy_implementations = "warn"
missing_debug_implementations = "warn"
missing_docs = "warn"
nonstandard_style = { level = "warn", priority = -1 }
rust_2021_compatibility = { level = "warn", priority = -1 }

rust_2018_idioms = { level = "deny", priority = -1 }
unreachable_pub = "deny"
unused_extern_crates = "deny"

unsafe_code = "forbid"

[workspace.lints.clippy]
dbg_macro = "warn"
expect_used = "warn"
fallible_impl_from = "warn"
fn_params_excessive_bools = "warn"
indexing_slicing = "warn"
missing_const_for_fn = "warn"
must_use_candidate = "warn"
panic = "warn"
todo = "warn"
unneeded_field_pattern = "warn"
unwrap_used = "warn"
wildcard_enum_match_arm = "warn"

all = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
