[package]
name = "from_js_ref"
version = "0.2.0"
description = "Trait for converting from JS interface reference wrappers"

authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
js-sys.workspace = true
wasm-bindgen.workspace = true

[dev-dependencies]
wasm_refgen = { path = "../wasm_refgen" }

[features]
default = []
std = []
