[package]
name = "wasm_refgen"
version = "0.1.6"
description = "Macro for generating JS interface reference hack for wasm-bindgen"
readme = "./README.md"

authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
proc-macro = true

[dependencies]
from_js_ref = "0.1.3"
wasm-bindgen.workspace = true
heck.workspace = true
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true

[features]
default = []
std = []
