[package]
name = "wasm_refgen"
version = "0.2.0"
description = "Macro for generating JS interface reference hack for wasm-bindgen"
readme = "./README.md"
keywords = ["wasm", "wasm-bindgen", "proc-macro"]
categories = ["wasm"]

authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
proc-macro = true

[dependencies]
from_js_ref = { path = "../from_js_ref", version = "0.2.0" }
wasm-bindgen.workspace = true
heck.workspace = true
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true

[features]
default = []
std = []
