[package]
name = "wasm_trait"
version = "0.1.0"
description = "JS duck-typed interfaces as Rust traits with compile-time conformance checking"

authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
proc-macro = true

[dependencies]
heck.workspace = true
proc-macro2.workspace = true
quote.workspace = true
syn = { workspace = true, features = ["full"] }

[features]
default = []
std = []
